Fixed some movile issues by using .modules.css files and hid the white border on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -278,6 +278,7 @@ nav a:hover{
   }
   .content{
     padding: 15px;
+    border: none;
   }
   #home{
     flex-direction: column !important;
