--- a/src/pages/stylings/home.css
+++ b/src/pages/stylings/home.css
@@ -16,6 +16,25 @@
     z-index: 5;
   
   }
+  .scroll-down-button{
+    position: absolute;
+    bottom: 25px;
+    left: calc(50% - 75px);
+    width: 150px;
+    background-color: transparent;
+    border: none;
+  }
+  .scroll-down-button div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  .scroll-down-button img{
+    width: 50px;
+    height: 50px;
+  }
   .home-page h1{
     font-size: 60px;
   }
